<resources>
    <string name="app_name">AwareBot</string>
    <string name="button">Button</string>

    <string name="select_your_zone">SELECT\nYOUR\nZONE !</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="enter_password">Enter Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="log_in">Log In</string>
    <string name="image_showing_description">Image showing description.</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="select_type_of_post">Select type of Post</string>
    <string name="create_new_post_here">Create new Post here.</string>
    <string name="teacher_name">Teacher\'s Name:</string>
    <string name="time">Time:</string>
    <string name="place_room_lab">Place(Room/Lab):</string>
    <string name="subject">Subject:</string>
    <string name="alert_name">Alert Name:</string>

</resources>
