<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >


<ScrollView
    android:id="@+id/layout3"
android:layout_width="wrap_content"
android:layout_height="wrap_content">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#c6fabd2e"
    android:padding="10dp">

    <EditText
        android:id="@+id/et_submission_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/subject"
        android:textColorHint="#95000000"
        android:textColor="#000000"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/et_submission_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_submission_subject"
        android:gravity="center_horizontal"
        android:textColorHint="#95000000"
        android:textColor="#000000"
        android:hint="Place-Room/Lab (Optional):"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_submission_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#95000000"
        android:textColor="#000000"
        android:layout_below="@+id/et_submission_place"
        android:gravity="center_horizontal"
        android:hint="@string/time" />


    <EditText
        android:id="@+id/et_submission_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#95000000"
        android:textColor="#000000"
        android:layout_below="@+id/et_submission_time"
        android:gravity="center_horizontal"
        android:hint="@string/teacher_name"
        android:inputType="textAutoComplete" />
    <Button
        android:id="@+id/btn_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/more"
        android:drawableRight="@drawable/more"
        android:layout_below="@id/et_submission_teacher"
        android:text="Select Class" />
</RelativeLayout>

</ScrollView>
    <Button
        android:id="@+id/btn_create_submission_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Create Post" />

</RelativeLayout>